# git-web-view

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
default-template/: directory  directory.html  file  file.html
default-template/static/: style.css
default-template/template/: directory.html  file.html
src/: files.rs  git.rs  main.rs  options.rs  response.rs  template.rs
src/template/: links.rs  nav.rs
